--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>EmojiCrush</title>
-    <link rel="stylesheet" href="/emojicrush.css" />
+    <link rel="stylesheet" href="emojicrush.css" />
   </head>
   <body>
     <div id="game">
       <div id="boardArea"></div>
     </div>
-    <script src="/emojicrush.js"></script>
+    <script src="emojicrush.js"></script>
   </body>
 </html>
