--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <div id="game">
       <div id="boardArea"></div>
     </div>
-    <script src="emojicrush.js"></script>
+    <script src="emojicrush.js?version=1"></script>
   </body>
 </html>
