Change css version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>EmojiCrush</title>
-    <link rel="stylesheet" href="emojicrush.css" />
+    <link rel="stylesheet" href="emojicrush.css?version=2" />
   </head>
   <body>
     <div id="game">
