--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>EmojiCrush</title>
     <link rel="stylesheet" href="emojicrush.css?version=7" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   </head>
   <body>
     <div id="game">
