Fix urls in manifest

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>EmojiCrush</title>
     <link rel="stylesheet" href="emojicrush.css?version=7" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json?version=1" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   </head>
   <body>
